MJ1 - Fix transition bug that is hiding toolbar buttons from being visible

--- a/public/css/chatroom.css
+++ b/public/css/chatroom.css
@@ -27,3 +27,8 @@ svg{
     width: 100%;
     height: 100%;
 }
+
+.toolbar-icon > svg {
+    width: 1.8rem;
+    height: 1.8rem;
+}
